# src/models/user.model.ts
@@ -1,5 +1,7 @@
 import mongoose from "mongoose";
 import { encrypt } from "../utils/encryption";
+import { renderMailHtml, sendMail } from "../utils/mail/mail";
+import { CLIENT_HOST } from "../utils/env";
 
 export interface User {
   fullName: string;
@@ -10,6 +12,7 @@ export interface User {
   profilePicture: string;
   isActive: boolean;
   activactionCode: string;
+  createdAt?: string;
 }
 
 const Schema = mongoose.Schema;
@@ -23,10 +26,12 @@ const UserSchema = new Schema<User>(
     email: {
       type: Schema.Types.String,
       required: true,
+      unique: true,
     },
     username: {
       type: Schema.Types.String,
       required: true,
+      unique: true,
     },
     password: {
       type: Schema.Types.String,
@@ -58,7 +63,35 @@ const UserSchema = new Schema<User>(
 UserSchema.pre("save", function (next) {
   const user = this;
   user.password = encrypt(user.password);
+  user.activactionCode = encrypt(user.id);
   next();
+});
+
+UserSchema.post("save", async function (doc, next) {
+  try {
+    const user = doc;
+
+    console.log("send email to ", user.email);
+
+    const contentMail = await renderMailHtml("registration-success", {
+      username: user.username,
+      fullName: user.fullName,
+      email: user.email,
+      createdAt: user.createdAt,
+      activationLink: `${CLIENT_HOST}/auth/activation?code=${user.activactionCode}`,
+    });
+
+    await sendMail({
+      from: "yusufnurfaizip05@gmail.com",
+      to: user.email,
+      subject: "Activation User",
+      html: contentMail,
+    });
+  } catch (error) {
+    console.log(error);
+  } finally {
+    next();
+  }
 });
 
 UserSchema.methods.toJSON = function () {
